# advent-of-code-2025

./: Cargo.toml  README.md  add_new_day.sh  bacon.toml  justfile
benches/: all-days.rs
src/: common.rs  day01a.rs  day01b.rs  days.rs  lib.rs
src/days/: day01a.rs  day01b.rs  day02a.rs  day02b.rs  day03a.rs  day03b.rs  day04a.rs  day04b.rs  day05a.rs  day05b.rs  day06a.rs  day06b.rs  day07a.rs  day07b.rs  day08a.rs  day08b.rs  day09a.rs  day09b.rs
templates/: new_day.rs  new_day_bin.rs
