[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.16.1"
itertools = "0.14.0"
num = "0.4.3"
ordered-float = "5.1.0"
primitive-types = "0.14.0"
rayon = "1.11.0"
took = "0.1.2"
u256-literal = "1.2.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[lib]

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[[bin]]
name = "runner-par"
path = "src/bin/runner-par.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bench]]
name = "all-days"
harness = false

[[bin]]
name = "day01a"
path = "src/bin/days/day01a.rs"

[[bin]]
name = "day01b"
path = "src/bin/days/day01b.rs"

[[bin]]
name = "day02a"
path = "src/bin/days/day02a.rs"

[[bin]]
name = "day02b"
path = "src/bin/days/day02b.rs"

[[bin]]
name = "day03a"
path = "src/bin/days/day03a.rs"

[[bin]]
name = "day03b"
path = "src/bin/days/day03b.rs"

[[bin]]
name = "day04a"
path = "src/bin/days/day04a.rs"

[[bin]]
name = "day04b"
path = "src/bin/days/day04b.rs"

[[bin]]
name = "day05a"
path = "src/bin/days/day05a.rs"

[[bin]]
name = "day05b"
path = "src/bin/days/day05b.rs"

[[bin]]
name = "day06a"
path = "src/bin/days/day06a.rs"

[[bin]]
name = "day06b"
path = "src/bin/days/day06b.rs"

[[bin]]
name = "day07a"
path = "src/bin/days/day07a.rs"

[[bin]]
name = "day07b"
path = "src/bin/days/day07b.rs"

[[bin]]
name = "day08a"
path = "src/bin/days/day08a.rs"

[[bin]]
name = "day08b"
path = "src/bin/days/day08b.rs"

[[bin]]
name = "day09a"
path = "src/bin/days/day09a.rs"

[[bin]]
name = "day09b"
path = "src/bin/days/day09b.rs"
